--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="description" content="A cafe featuring macarons and live music.">
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
-		<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/images/favicon.ico?" type="image/x-icon">
+		<link rel="icon" href="/images/favicon.ico?" type="image/x-icon">
 	</head>
 	<body>
 		<header>
