--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="A cafe featuring macarons and live music.">
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
-		<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
@@ -24,7 +24,7 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
-				<img src="/images/cafe-counter.jpg" alt="A cafe counter with a barista in the distance">
+				<img src="images/cafe-counter.jpg" alt="A cafe counter with a barista in the distance">
 				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
 			
 				<ul>
